# xiaohongshu-auto-publisher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
agents/: __init__.py  base.py  content_generator.py  cover_generator.py  image_insight_agent.py  knowledge_curator.py  originality_reviewer.py  publish_manager.py  trend_scanner.py  xiaohongshu_manager.py
common/: __init__.py  baidu_ocr_client.py  config.py  db.py  glm_text_client.py  glm_vision_client.py  image_support.py  logging_utils.py  models.py  qwen_image_client.py  qwen_text_client.py  qwen_vision_client.py  utils.py  vector_store.py  vision_utils.py  xhs_mcp_client.py  xhs_profile_scraper.py
config/: cron_schedule.yaml  mcp_config.json  nginx_xhs_web.conf  settings.local.example.yaml  settings.yaml
data/: sensitive_words.txt
data/cover_templates/: default.html  emotion_pink.html  food_warm.html  tech_cool.html
docs/: deploy.md
scheduler/: cron_runner.py
scripts/: bootstrap-deploy.ps1  bootstrap-vps.sh  deploy-vps.sh  deploy.ps1  setup-env-vps.sh  setup-env.ps1
skills/: __init__.py
skills/custom_scripts/: __init__.py  xhs_spider.py
skills/xiaohongshu-growth-playbook/: SKILL.md
skills/xiaohongshu-growth-playbook/agents/: openai.yaml
skills/xiaohongshu-growth-playbook/references/: cover-copy-rules.md
webui/: server.py
webui/static/: app.js  index.html  styles.css
